[tool.poetry]
name = "stimplainn"
version = "0.1.0"
description = ""
authors = ["Jóhann Friðriksson <johann.fridriksson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
parsel = "^1.7.0"
requests = "^2.28.2"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
stimplainn = "stimplainn.main:main"
